# masterclass_workshop

./: CMakeLists.txt  README.md  card.cc  card.h  card_collection.h  card_generator.cc  card_generator.h  cards.cc  cards.h  main.cc
